styles.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body{
  font-size: 1rem;
  font-family: "Poppins", sans-serif;
  
  font-style: normal;
}
header{
  display: flex;
  flex-direction: column;
  padding: 10px;
  text-align: center;
  justify-content: center;
  background: #FC6736;
  color: #fff;
  box-shadow: 0 4px 8px 0 rgba(255, 121, 11, 0.3), 0 6px 20px 0 rgba(255, 104, 4, 0.3);
}
.heading{
  font-size: 2rem;
  font-weight: 700;
  margin-bottom: 10px;
}
.heading-name{
  font-size: 1.5rem;
  font-weight: 400;
  color: rgba(255, 255, 255, 0.7);
  margin-bottom: 15px;
}
header ul {
  display: flex;
  justify-content: center;
}
header ul li{
  list-style-type: none;
  margin: 20px;
  font-size: 1.3rem;
}
header a{
  text-decoration: none;
  font-size: 1.2rem;
  color: #fff;
  padding: 5px 10px;
  border: 3px solid #fff;
  border-radius: 50px;

  
}

/* body of the page */

main{
  width: 90vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 10px auto;
}
section{
  width: 100%;
  height: fit-content;
  background: #EEEDEB;
  margin: 10px 0;
  border-radius: 5px;
}
#about{
  height: fit-content;
  padding: 10px;
  text-align: center;
  padding-top: 30px;
}
#about h2{
  margin: 15px;
}
#about p{
  margin: 15px;

}
.my-image{
  width: 100px;
  height: 100px;
  border-radius: 50px;
  margin: 10px auto;
}
.my-image img{
  border-radius: 50px;
  width: 100%;
  height: 100%;
}

#skills{
  padding: 30px 10px;
  font-size: 1.6rem;
}
#skills h2{
  text-align: center;
  margin: 10px;
}
#skills li{
  margin: 10px;
  height: fit-content;
  width: 95%;
  background: #f7f6f4;
  padding: 15px 10px;
  list-style-type: none;
  font-size: 1.2rem;
  font-weight: 600;
  border-radius: 7px;
  display: flex;
  align-items: center;
}
.full{
  width: 90%;
  height: 10px;
  background: #EEEDEB;
  margin: 10px;
  border-radius: 5px;
}
.percentage{
  height: 100%;
  background:#FC6736;
  border-radius: 5px;
}
/* .percentage:nth-of-type(2){
  width: 90%;
  background:#1a0b06;
  

} */
.one{
  width: 80%;
  
}
.two{
  width: 90%;

}
.three{
  width: 70%;

}
.four{
  width: 80%;

}
.five{
  width: 50%;

}
/* projects section */

#projects{
  padding: 10px;
}
#projects h2{
  margin: 20px auto;
  font-size: 2rem;
  text-align: center;
}
.project{
  margin: 10px;
  background: #f7f6f4;
  padding: 10px;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.project-image{
  width: 600px;
  height: 140px;
  background: #EEEDEB;
  margin: 10px;
  border-radius: 10px;
}
.project-image img{
  width: 100%;
  height: 100%;
  border-radius: 10px;
  
}
.project-description{
  width: 1000px;
  height: 140px;
  /* background: #EEEDEB; */
  margin: 10px;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
}
.project-description h3{
  margin: 5px;
  text-transform: uppercase;
  
}
button{
  width: fit-content;
  font-size: 1.2rem;
  padding: 5px 8px;
  border-radius: 5px;
  border-style: none;
  background: #FC6736;
  margin: 10px 0;
}
button a{
  color: #fff;
  font-weight: 500;
  text-decoration: none;

}

footer{
  background: #FC6736;

}

#contact{
  color: #fff;
  padding: 15px;
}

#contact h2{
  text-align: center;
  font-size: 2rem;
  font-weight: 600;
  margin: 20px;

  
}
input{
  padding: 10px;
  margin: 5px;
  width: 90%;
  font-size: 1.2rem;
  
}
input:focus{
  outline: none;
}
input:nth-of-type(3){
  height: 150px;
  vertical-align: top;
  
}
.send-massage{
  background: #fd4d12;
  padding: 10px 20px;
  margin: 5px;
  width: fit-content;
  border-radius: 50px;
  font-weight: 700;
}

.my-contacts{
  text-align: left;
  margin: 20px 0 40px 0;
}
.contact-head{
  font-size: 2rem;
  font-weight: 600;
  text-align: center;
  margin: 40px 40px 20px 40px;
}
.my-contacts h3{
  font-size: 1.6rem;
  margin: 15px 0 5px;
}
.my-contacts p {
  font-size: 1.2rem;
  color: rgba(255, 255, 255, 0.9);
  cursor: pointer;
}
.my-contacts a{
  font-size: 1.2rem;
  color: rgba(255, 255, 255, 0.9);
}

